criada a página spaceships e addicionado mais imagens

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             <nav>
                 <a href="SpaceX.html">
                     <img src="images/logo.png" alt="logo.png">
-                </a>
+                </a> |
+                <a href="spaceships.html"> The Spaceships</a> 
             </nav>
             <hr>
         </header>
