criada a página hire us e feito as modificações dos links

--- a/spaceships.html
+++ b/spaceships.html
@@ -11,6 +11,7 @@
                     <img src="images/logo.png" alt="logo.png">
                 </a> | <!--A imagem vira o link-->
                 <a href="spaceships.html">The Spaceships</a> |
+                <a href="hire-us.html">Hire Us</a> |
             </nav>
             <hr>
         </header>
