--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <body>
         <header>
             <nav>
-                <a href="SpaceX.html">
+                <a href="index.html">
                     <img src="images/logo.png" alt="logo.png">
-                </a> |
-                <a href="spaceships.html"> The Spaceships</a> 
+                </a> | <!--A imagem vira o link-->
+                <a href="spaceships.html">The Spaceships</a> |
+                <a href="hire-us.html">Hire Us</a> |
             </nav>
             <hr>
         </header>
